Ensure that initfini.c is referenced by exit.c. The start up code has to reference the latter as a return of main() results in a call to exit(3), so this ensures that the libc constructors are run for statically linked programs. Fixes PR 37454.